applications/platform/default/sources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: events-webhook
  namespace: argo-events
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "events.happylittlecloud.ca"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: events-webhook
            port:
              number: 443
